--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <title>CryPt - OAuth Service</title>
   </head>
   <body>
